force-app/main/default/objects/Test__c/fields/Coding_System__c.field-meta.xml
<CustomField>
    <fullName>Coding_System__c</fullName>
    <description>It is used to Store Encoding System.</description>
    <label>Coding System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOINC</fullName>
            </value>
            <value>
                <fullName>SNOMEDCT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>