force-app/main/default/objects/Test__c/fields/IsPreferred__c.field-meta.xml
<CustomField>
    <fullName>IsPreferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPreferred</label>
    <type>Checkbox</type>
</CustomField>