force-app/main/default/objects/Test__c/fields/Labs__c.field-meta.xml
<CustomField>
    <fullName>Labs__c</fullName>
    <label>Labs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>