force-app/main/default/objects/Test__c/fields/Loinc_Code__c.field-meta.xml
<CustomField>
    <fullName>Loinc_Code__c</fullName>
    <description>to Store Loinc Code</description>
    <label>LOINC Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>