force-app/main/default/objects/Test__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Users are able to select only package tests.</errorMessage>
        <filterItems>
            <field>Test__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Package</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>