force-app/main/default/objects/Test__c/fields/Test_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>