force-app/main/default/objects/Test__c/recordTypes/CHC_Test.recordType-meta.xml
<RecordType>
    <fullName>CHC_Test</fullName>
    <active>true</active>
    <label>CHC Test</label>
</RecordType>