force-app/main/default/objects/Test__c/recordTypes/Manual_Test.recordType-meta.xml
<RecordType>
    <fullName>Manual_Test</fullName>
    <active>true</active>
    <label>Manual Test</label>
</RecordType>