force-app/main/default/objects/Test__c/recordTypes/Package.recordType-meta.xml
<RecordType>
    <fullName>Package</fullName>
    <active>true</active>
    <label>Package</label>
</RecordType>