force-app/main/default/objects/Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lab_Id__c</columns>
    <columns>Labs__c</columns>
    <columns>Test_Description__c</columns>
    <columns>Test_Id__c</columns>
    <columns>Test_Name__c</columns>
    <columns>Test__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>